<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_8sdp"
    app:cardCornerRadius="@dimen/_13sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:background="@drawable/bg_app"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_8sdp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/iv_search_location" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:fontFamily="@font/lato_700"
            android:text="@string/set_location"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/lato_400"
            android:text="@string/set_your_location_to_find_out_accurate_qibla_compass"
            android:textColor="#CED2D6"
            android:textSize="@dimen/_10ssp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:background="@drawable/bg_c8">

            <ImageView
                android:layout_marginStart="@dimen/_8sdp"
                android:id="@+id/iv_search_location"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_search_location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <AutoCompleteTextView
                android:id="@+id/map_search"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/_6sdp"
                android:background="@android:color/transparent"
                android:dropDownHeight="240dp"
                android:ellipsize="end"
                android:hint="@string/enter_your_location"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#616C78"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_get_location"
                app:layout_constraintStart_toEndOf="@+id/iv_search_location"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_get_location"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/search"
                android:src="@drawable/ic_get_location"
                android:padding="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:ellipsize="end"
                android:fontFamily="@font/lato_700"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingHorizontal="@dimen/_12sdp"
                android:singleLine="true"
                android:text="@string/cancel"
                android:textColor="#C2C9D0"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ellipsize="end"
                android:fontFamily="@font/lato_700"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingHorizontal="@dimen/_12sdp"
                android:singleLine="true"
                android:text="@string/OK"
                android:textColor="#CCEAFF"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>