<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_13sdp"
    app:cardCornerRadius="@dimen/_13sdp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_18sdp"
        android:paddingVertical="@dimen/_18sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/lato_400"
            android:text="@string/Warning"
            android:textColor="#1F3848"
            android:textSize="22sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/lato_400"
            android:gravity="center"
            android:text="@string/your_device"
            android:textColor="#1F3848"
            android:textSize="@dimen/_12ssp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_30sdp"
            app:cardBackgroundColor="#0095FF"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/lato_400"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/OK"
                android:textColor="#23272B"
                android:textSize="@dimen/_12ssp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.cardview.widget.CardView>