<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_13sdp"
    app:cardCornerRadius="@dimen/_13sdp"
    app:cardElevation="0dp">

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_18sdp"
        android:paddingVertical="@dimen/_18sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:fontFamily="@font/lato_400"
            android:textStyle="bold"
            android:textColor="#1F3848"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/permission_alert"
            android:textSize="22sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:fontFamily="@font/lato_400"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:text="@string/some_function"
            android:textColor="#1F3848"
            android:textSize="@dimen/_12ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                app:cardElevation="0dp"
                android:id="@+id/cancel"
                app:cardCornerRadius="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:cardBackgroundColor="#D0D9E1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:includeFontPadding="false"
                    android:layout_gravity="center"
                    android:paddingVertical="@dimen/_8sdp"
                    android:fontFamily="@font/lato_400"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="#515961"
                    android:textSize="@dimen/_12ssp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                app:cardElevation="0dp"
                android:id="@+id/save"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardBackgroundColor="#0095FF"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:includeFontPadding="false"
                    android:layout_gravity="center"
                    android:paddingVertical="@dimen/_8sdp"
                    android:fontFamily="@font/lato_400"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/OK"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>