<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_12sdp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/lato_700"
            android:gravity="start"
            android:text="@string/enable_permission"
            android:textColor="#1F3848"
            android:textSize="@dimen/_12ssp" />

        <RelativeLayout
            android:id="@+id/rl_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/ic_lang_sn"
            android:padding="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name">

            <TextView
                android:id="@+id/tv_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10ssp"
                android:fontFamily="@font/lato_700"
                android:includeFontPadding="false"
                android:text="@string/read_location"
                android:textColor="#1F3848"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/switch_off" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:background="@drawable/ic_lang_sn"
            android:padding="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rl_read">

            <TextView
                android:id="@+id/tv_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10ssp"
                android:fontFamily="@font/lato_700"
                android:includeFontPadding="false"
                android:text="@string/Camera"
                android:textColor="#1F3848"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/switch_off" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_gps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_lang_sn"
            android:padding="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rl_camera">

            <TextView
                android:id="@+id/tv_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10ssp"
                android:fontFamily="@font/lato_700"
                android:includeFontPadding="false"
                android:text="@string/gps"
                android:textColor="#1F3848"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/switch_off" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardBackgroundColor="#0095FF"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/lato_400"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/OK"
                android:textColor="#23272B"
                android:textSize="@dimen/_12ssp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.cardview.widget.CardView>